# blueprince-sim

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
docs/: drafting.md  greedy-strategy.md  locking.md  luck.md  rewards.md
models/: README.md
models/baseline-ep8275991/: MANIFEST.json  metrics.jsonl
src/blueprince_sim/: __init__.py  config.py
src/blueprince_sim/cli/: __main__.py  batch.py  play.py  policies.py  render.py
src/blueprince_sim/data/: items.json  locks.json  priority_draws.json  rooms.json  weights.json
src/blueprince_sim/engine/: __init__.py  decks.py  draft.py  game.py  grid.py  items.py  locks.py  model.py  placement.py  rng.py  rotation.py  state.py
src/blueprince_sim/engine/effects/: __init__.py  tier1.py
src/blueprince_sim/env/: __init__.py  actions.py  blueprince_env.py  obs.py  rewards.py
src/blueprince_sim/rl/: mixed_policy.py  train.py
src/blueprince_sim/web/: __init__.py  replay.py  server.py
src/blueprince_sim/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_conservatory_reroll.py  test_decks.py  test_draft_stats.py  test_env_api.py  test_evaluate.py  test_furnace_bias.py  test_game.py  test_locks.py  test_macro_actions.py  test_mixed_policy.py  test_placement.py  test_replay.py  test_rotation.py  test_tunnel_chain.py
tools/: benchmark_env.py  ingest_sheet.py  make_dashboard.py  make_release.py  supplemental_rooms.json  validate_data.py
tools/raw/: tfmurphy_room_table.md
